--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.0/axios.min.js"></script>
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>Auto-memory</title>
 </head>
 <body style="background-color: rgb(21, 21, 21)">
  <div id="input-container"></div>
